--- a/web/views/errors/default.html.twig
+++ b/web/views/errors/default.html.twig
@@ -1,13 +1,12 @@
 {% extends "masters/layout-empty.twig" %}
 
 {% block content %}
+    {% block header %}
+        {{ parent() }}
+    {% endblock %}
+
     <div class="error-msg">
-        <h1>Error</h1>
-        <p>
-            You are seeing this Error Page because an error occured, duh.
-        </p>
-        <p class="help-msg">
-            Make the robot happy by going to admin/default and changing xxx to yyy.
-        </p>
+        <p class="lead-text">You are seeing this error page because an error occurred.</p>
+        <p class="help-msg"><a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale }}">Go to home page</a></p>
     </div>
 {% endblock %}
