--- a/web/views/masters/layout-default.twig
+++ b/web/views/masters/layout-default.twig
@@ -131,7 +131,10 @@
                         <p>
                             © 2015 Stevo Strackovski
                         </p>
-                        <p><a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/legal' }}" class="show-legal go-popup">Legal</a></p>
+                        <p>
+                            <a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/legal' }}" class="show-disclaimer go-popup">Disclaimer</a> |
+                            <a href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/legal' }}" class="show-legal go-popup">Legal</a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -209,24 +212,20 @@
         </div>
     </div>
 
-    <div class="popup-box legal-box">
+    <div class="popup-box disclaimer-box">
         <a class="close-popup" href="#"><i class="fa fa-times"></i></a>
-        <h3>Legal</h3>
         <div class="popup-content">
-            <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in
-                the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
-                recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-            </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit essentially unchanged. Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            </p>
+            {% include 'disclaimer.twig' %}
         </div>
     </div>
+
+    <div class="popup-box legal-box">
+        <a class="close-popup" href="#"><i class="fa fa-times"></i></a>
+        <div class="popup-content">
+            {% include 'legal.twig' %}
+        </div>
+    </div>
+
     <div class="shadow"></div>
     {% endblock %}
 
