--- a/web/assets/styles/errors.css
+++ b/web/assets/styles/errors.css
@@ -5,7 +5,7 @@
  */
 
 /* =======================================================
- * ERROR PAGE STYLESHEET
+ * ERROR PAGES STYLESHEET
  * ======================================================= */
 html, body {
     height: 100%;
