--- a/web/assets/styles/main.css
+++ b/web/assets/styles/main.css
@@ -1110,13 +1110,14 @@ footer.f2 a:hover, footer.f2 a:focus { color: #444444; }
 
 .popup-content ul {
     list-style: disc;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     padding-left: 10px;
 }
 
 .popup-content ul li {
-    display: block;
     font-size: .95em;
+    margin: 10px 20px;
+    color: #666;
 }
 
 .popup-content p {
@@ -1124,7 +1125,15 @@ footer.f2 a:hover, footer.f2 a:focus { color: #444444; }
     text-align: justify;
     margin: 0 auto;
     padding-bottom: 10px;
-    color: #909084;
+    color: #666;
+}
+
+.popup-content p:last-child {
+    padding-top: 10px;
+    padding-bottom: 20px;
+    font-size: .8em;
+    color: #999;
+    text-align: center;
 }
 
 @media screen and (max-width: 460px) {
@@ -1351,4 +1360,14 @@ footer.f2 a:hover, footer.f2 a:focus { color: #444444; }
     .desktop-menu ul {
         max-width: 1200px;
     }
+}
+
+.top-logo {
+    margin: 0 auto;
+    padding-top: 30px;
+    text-align: center;
+}
+
+.top-logo img {
+    width: 60px;
 }
