Add static pages.

--- a/web/views/legal.twig
+++ b/web/views/legal.twig
@@ -1,6 +1,10 @@
+<div class="top-logo">
+    <img src="{{ app.request.getBasePath() }}/web/assets/images/ss-logo-stamp.png" alt="S"/>
+</div>
+
 <h1>COPYRIGHT NOTICE</h1>
 <h2>Ownership of copyright</h2>
-<p>The copyright in this website and the material on this website (including without limitation the text, computer code, artwork, photographs, images, music, audio material, video material and audio-visual material on this website) is owned by Stevo Strackovski (refered to as "the owner").</p>
+<p>The copyright in this website and the material on this website (including without limitation the text, computer code, artwork, photographs, images, music, audio material, video material as well as audio-visual material on this website) is owned by Stevo Stračkovski (refered to as "the owner").</p>
 
 <h2>Copyright license</h2>
 <p>The owner grants to you a worldwide non-exclusive royalty-free revocable license to:</p>
@@ -9,10 +13,10 @@
     <li>copy and store this website and the material on this website in your web browser cache memory; and</li>
     <li>print pages from this website for your own [personal and non-commercial] use.</li>
 </ul>
-<p>The owner does not grant you any other rights in relation to this website or the material on this website. In other words, all other rights are reserved.</p>
+<p>The owner does not grant you any other rights in relation to this website or the material on this website. All other rights are reserved.</p>
 <p>For the avoidance of doubt, you must not adapt, edit, change, transform, publish, republish, distribute, redistribute, broadcast, rebroadcast or show or play in public this website or the material on this website (in any form or media) without the owner's prior written permission.</p>
 
-<h2>Data mining</h2>
+<h2>Data mining & collecting</h2>
 <p>The automated and/or systematic collection of data from this website is prohibited.</p>
 
 <h2>Permissions</h2>
@@ -25,3 +29,4 @@
 
 <h2>Infringing material</h2>
 <p>If you become aware of any material on the website that you believe infringes your or any other person's copyright, please report this by email to info@strackovski.com.</p>
+<p>Last modified March 2015</p>
