Update layout assets, remove page comments.

--- a/web/views/masters/layout-default.twig
+++ b/web/views/masters/layout-default.twig
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>{{ page.title }} | Stevo Strackovski</title>
+    <title>{{ page.title }} | Stevo Stračkovski</title>
     <meta name="description" content="{{ page.description }}">
     <meta name="author" content="{{ page.author }}">
     <link rel="stylesheet" href="{{ app.request.getBasePath() }}/web/assets/fonts/font-awesome-4.2.0/css/font-awesome.css"/>
@@ -145,7 +145,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
-                    <img src="{{ app.request.getBasePath() }}/web/assets/images/dama.jpg" alt=""/>
+                    <img src="{{ app.request.getBasePath() }}/web/artwork/dama.jpeg" alt=""/>
                 </div>
             </div>
         </div>
@@ -237,6 +237,5 @@
     <script type="text/javascript" src="http://browserstate.github.io/history.js/scripts/bundled/html4+html5/jquery.history.js"></script>
     <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/scripts/bootstrap.js"></script>
     <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/scripts/main.js"></script>
-
 </body>
 </html>
