--- a/web/views/page.twig
+++ b/web/views/page.twig
@@ -12,7 +12,7 @@
                                     <div class="ca-item ca-item-{{ i }}">
                                         <div class="ca-item-main">
                                             <a class="ca-icon nav-link nav-gallery" href="{{ app.request.baseUrl() ~ '/' ~ app.request.locale ~ '/gallery' }}">
-                                                <img src="{{ app.request.getBasePath() }}/web/artwork/{{ item }}" alt=""/>
+                                                <img src="{{ app.request.getBasePath() }}/web/artwork/{{ item.file }}" alt=""/>
                                             </a>
                                         </div>
                                     </div>
@@ -28,8 +28,8 @@
                         {% for item in artwork %}
                             <div class="col-sm-3 col-xs-6">
                                 <div class="thumb">
-                                    <img src="{{ app.request.getBasePath() }}/web/artwork/{{ item }}" alt="img"/>
-                                    <div class="preview" data-title="{{ item }}">
+                                    <img src="{{ app.request.getBasePath() }}/web/artwork/{{ item.file }}" alt="img"/>
+                                    <div class="preview" data-title="{{ item.title }}">
                                         <i class="fa fa-search fa-2x"></i>
                                     </div>
                                 </div>
@@ -42,7 +42,6 @@
             <div class="content content-3 content-about {% if active == 'about' %}shown-content{% endif %}">
                 <div class="section-1">
                     <div class="about-section">
-
                         <div class="more">
                             <a href="#"><img src="{{ app.request.getBasePath() }}/web/assets/images/arrow2.png" alt="More"/></a>
                         </div>
@@ -59,38 +58,10 @@
                                         Sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
                                         qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
                                         incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-                                        exercitationem
-                                        ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure
-                                        reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum
-                                        fugiat quo voluptas nulla pariatur?
+                                        exercitationem.
                                     </p>
                                 </div>
                             </div>
-
-                            <!--
-                            <div class="row">
-                                <div class="col-sm-8 col-lg-8 col-xs-11">
-                                    <h1><img class="about-txt" src="assets/images/author.png" alt="The Author"/></h1>
-                                    <p class="bold">
-                                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                                        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
-                                        sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-                                    </p>
-                                    <p>
-                                        Sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
-                                        qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
-                                        incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-                                        exercitationem
-                                        ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure
-                                        reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum
-                                        fugiat quo voluptas nulla pariatur?
-                                    </p>
-                                </div>
-                                <div class="col-sm-4 col-lg-4 col-xs-1 text-center">
-                                    <div class="more"><a href="#"><img src="assets/images/arrow2.png" alt="More"/></a></div>
-                                </div>
-                            </div>
-                            -->
                         </div>
                         <div class="section hidden-section">
                             <div class="about-row">
@@ -105,37 +76,11 @@
                                         Sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
                                         qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
                                         incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-                                        exercitationem
-                                        ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure
-                                        reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum
-                                        fugiat quo voluptas nulla pariatur?
+                                        exercitationem.
                                     </p>
                                 </div>
                             </div>
                         </div>
-                        <!--<div class="section hidden-section">
-                            <h1><img class="about-txt" src="assets/images/work.png" alt="The Work"/></h1>
-
-                            <div class="row">
-                                <div class="col-sm-8 col-lg-8 col-xs-11">
-                                    <p>
-                                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                                        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
-                                        sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
-                                    </p>
-                                    <p>
-                                        Sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
-                                        qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
-                                        incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-                                        exercitationem
-                                        ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure
-                                        reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum
-                                        fugiat quo voluptas nulla pariatur?
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        -->
                     </div>
                 </div>
             </div>
