--- a/web/views/page.twig
+++ b/web/views/page.twig
@@ -22,6 +22,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="content content-2 content-gallery {% if active == 'gallery' %}shown-content{% endif %}">
                 <div class="section-1">
                     <div class="row">
@@ -37,8 +38,8 @@
                         {% endfor %}
                     </div>
                 </div>
-
             </div>
+
             <div class="content content-3 content-about {% if active == 'about' %}shown-content{% endif %}">
                 <div class="section-1">
                     <div class="about-section">
@@ -49,16 +50,12 @@
                             <div class="about-row">
                                 <div class="about-col">
                                     <h1><img class="about-txt" src="{{ app.request.getBasePath() }}/web/assets/images/author.png" alt="The Author"/></h1>
+                                    {% set text = content.about.text|split('|') %}
                                     <p class="bold">
-                                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                                        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
-                                        sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                                        {{ text[0] }}
                                     </p>
                                     <p>
-                                        Sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
-                                        qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
-                                        incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-                                        exercitationem.
+                                        {{ text[1] }}
                                     </p>
                                 </div>
                             </div>
@@ -67,16 +64,12 @@
                             <div class="about-row">
                                 <div class="about-col">
                                     <h1><img class="about-txt" src="{{ app.request.getBasePath() }}/web/assets/images/work.png" alt="The Work"/></h1>
+                                    {% set text = content.work.text|split('|') %}
                                     <p class="bold">
-                                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                                        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
-                                        sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                                        {{ text[0] }}
                                     </p>
                                     <p>
-                                        Sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est,
-                                        qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
-                                        incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-                                        exercitationem.
+                                        {{ text[1] }}
                                     </p>
                                 </div>
                             </div>
@@ -84,7 +77,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 {% endblock %}
