Update email templates.

--- a/web/views/mail/template.twig
+++ b/web/views/mail/template.twig
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-    <title>Email Template - Geometric</title>
+    <title>Stračkovski Gallery</title>
     <style type="text/css">
         a:hover { color: #09F !important; text-decoration: underline !important; }
         a:hover#vw { background-color: #CCC !important; text-decoration: none !important; color:#000 !important; }
