--- a/web/assets/styles/modal.css
+++ b/web/assets/styles/modal.css
@@ -1,7 +1,7 @@
 /*!
  * Stevo Stračkovski Gallery Web Site (http://www.strackovski.com)
  * Copyright 2015 Vladimir Stračkovski
- * All rights reserved (https://github.com/strackovski-art-www)
+ * All rights reserved (https://github.com/strackovski-gallery-www)
  */
 
 /* =======================================================
