Update twig templates.

--- a/web/views/mail/contact-confirm.twig
+++ b/web/views/mail/contact-confirm.twig
@@ -50,12 +50,12 @@
                 <table cellspacing="0" border="0" cellpadding="0" width="624">
                     <tr>
                         <td>
-                            <p style="font-size: 14px; line-height: 16px; font-family: Georgia, 'Times New Roman', Times, serif; color: #333; margin: 0px;">You’re receiving this newsletter because you’ve subscribed to our Newsletter.
+                            <p style="font-size: 14px; line-height: 16px; font-family: Georgia, 'Times New Roman', Times, serif; color: #333; margin: 0px;">You’re receiving this email because you’ve subscribed to my newsletter.
                                 Not interested anymore?
                                 <a href="#" style="color: #4b98d7; text-decoration: none;">Unsubscribe now.</a>
                                 <br />
                                 <br />
-                                Copyright &copy; 2015 Stevo Strackovski.</p>
+                                Copyright &copy; 2015 Stevo Stračkovski.</p>
                             <p style="font-size: 17px; line-height: 24px; font-family: Georgia, 'Times New Roman', Times, serif; color: #333; margin: 0px;"><img  src="http://www.strackovski.com/web/views/mail/images/spacer-ten.jpg" height="10" width="624" /></p>
                         </td>
                     </tr>
