--- a/web/views/masters/layout-default.twig
+++ b/web/views/masters/layout-default.twig
@@ -214,8 +214,7 @@
                 <button type="submit" class="btn btn-default btn-block">SEND YOUR MESSAGE <i class="fa fa-angle-right"></i></button>
             </form>
             <div class="success-msg">
-                <p>Thank you for your message.</p>
-                <p>We will get back to you as soon as possible.</p>
+                <p>Thank you for your message. I will get back to you as soon as possible.</p>
             </div>
             <div class="fail-msg">
                 <p>Something went wrong.</p>
