Use minified script/stylesheets.

--- a/web/views/masters/layout-default.twig
+++ b/web/views/masters/layout-default.twig
@@ -8,12 +8,12 @@
     <meta name="description" content="{{ page.description }}">
     <meta name="author" content="{{ page.author }}">
     <link rel="stylesheet" href="{{ app.request.getBasePath() }}/web/assets/fonts/font-awesome-4.2.0/css/font-awesome.css"/>
-    <link rel="stylesheet" href="{{ app.request.getBasePath() }}/web/assets/styles/reset.css"/>
-    <link rel="stylesheet" href="{{ app.request.getBasePath() }}/web/assets/styles/bootstrap.css"/>
-    <link rel="stylesheet" href="{{ app.request.getBasePath() }}/web/assets/styles/slider.css"/>
+    <link rel="stylesheet" href="{{ app.request.getBasePath() }}/web/assets/build/reset.min.css"/>
+    <link rel="stylesheet" href="{{ app.request.getBasePath() }}/web/assets/build/bootstrap.min.css"/>
+    <link rel="stylesheet" href="{{ app.request.getBasePath() }}/web/assets/build/slider.min.css"/>
     <link rel="stylesheet" href="{{ app.request.getBasePath() }}/web/assets/styles/jquery.jscrollpane.css"/>
-    <link rel="stylesheet" href="{{ app.request.getBasePath() }}/web/assets/styles/modal.css"/>
-    <link rel="stylesheet" href="{{ app.request.getBasePath() }}/web/assets/styles/main.css"/>
+    <link rel="stylesheet" href="{{ app.request.getBasePath() }}/web/assets/build/modal.min.css"/>
+    <link rel="stylesheet" href="{{ app.request.getBasePath() }}/web/assets/build/main.min.css"/>
     <link rel="apple-touch-icon" sizes="57x57" href="{{ app.request.getBasePath() }}/web/icons/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="{{ app.request.getBasePath() }}/web/icons/apple-touch-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="{{ app.request.getBasePath() }}/web/icons/apple-touch-icon-72x72.png">
@@ -239,13 +239,13 @@
     <div class="shadow"></div>
     {% endblock %}
 
-    <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/scripts/jquery-1.11.1.js"></script>
-    <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/scripts/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/scripts/jquery.mousewheel.js"></script>
-    <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/scripts/jquery.contentcarousel.js"></script>
-    <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/scripts/jquery.mobile.custom.js"></script>
+    <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/build/jquery-1.11.1.js"></script>
+    <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/build/jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/build/jquery.mousewheel.js"></script>
+    <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/build/jquery.contentcarousel.js"></script>
+    <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/build/jquery.mobile.custom.js"></script>
     <script type="text/javascript" src="http://browserstate.github.io/history.js/scripts/bundled/html4+html5/jquery.history.js"></script>
-    <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/scripts/bootstrap.js"></script>
-    <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/scripts/main.js"></script>
+    <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/build/bootstrap.js"></script>
+    <script type="text/javascript" src="{{ app.request.getBasePath() }}/web/assets/build/main.js"></script>
 </body>
 </html>
